--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,16 @@
-name: Deploy Sphinx documentation to Pages
+name: Publish Github Pages
 
 on:
   push:
-    branches: [master] # branch to trigger deployment
+    branches: [master]
+    paths-ignore:
+      - .github/workflows/gitee-pages.yml
+
+# Cancel any in-progress job or run
+# https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#concurrency
+concurrency:
+  group: gh-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   pages:
@@ -10,9 +18,18 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
     permissions:
       pages: write
       id-token: write
     steps:
+    - run: |
+        sudo locale-gen en_US.UTF-8
+        sudo update-locale
     - id: deployment
       uses: sphinx-notes/pages@v3
+      with:
+        documentation_path: .
+        requirements_path: ./requirements.txt
+        cache: true
+        python_version: 3.12
